# zeroclaw-solana-plugins

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/solana-zeroclaw-core/: Cargo.toml
crates/solana-zeroclaw-core/src/: durable_nonce.rs  formatting.rs  instruction.rs  lib.rs  pubkey.rs  rpc.rs  transaction.rs
plugins/balance-check/: Cargo.toml  manifest.toml
plugins/balance-check/src/: balance.rs  lib.rs
plugins/solana-depin-node/: Cargo.toml  README.md  manifest.toml
plugins/solana-depin-node/src/: depin.rs  lib.rs
plugins/spl-transfer-build/: Cargo.toml  manifest.toml
plugins/spl-transfer-build/src/: lib.rs  transfer.rs
