[package]
name = "solana-zeroclaw-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure, lean, MIT-licensed Solana WASM substrate for ZeroClaw tool plugins. Provides bs58, borsh instruction builders, versioned transactions, durable nonces, and waki JSON-RPC client."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
base64 = "0.22"
sha2 = "0.10"

# wasi:http blocking client via waki, compiled only for wasm32-wasip2 components
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
