[package]
name = "solana-depin-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin: reference implementation for Solana DePIN edge nodes (Raspberry Pi/ESP32) reporting sensor readings to on-chain state contracts."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-zeroclaw-core = { path = "../../crates/solana-zeroclaw-core" }
base64 = "0.22"
