[package]
name = "spl-transfer-build"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin: builds unsigned Solana SOL/SPL token transfer transactions sandboxed for safe human approval."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-zeroclaw-core = { path = "../../crates/solana-zeroclaw-core" }
base64 = "0.22"
